[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "hls-health"
version = "0.1.0"
description = "Analyze HLS playlists and segments to report health, timing, and format info"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "HLS Health Contributors" }
]
keywords = ["HLS", "HTTP Live Streaming", "MPEG-TS", "AAC", "m3u8", "streaming", "video"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Internet :: WWW/HTTP",
  "Environment :: Console",
]
dependencies = [
  "m3u8>=4.0.0",
  "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/your-org/hls-health"
Issues = "https://github.com/your-org/hls-health/issues"

[project.scripts]
hls-health = "hls_health.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "UP", # pyupgrade
]
ignore = [
  "E203",  # whitespace before ':' (black compatibility)
]

[tool.ruff.lint.isort]
known-first-party = ["hls_health"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true


