[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "vodlint"
version = "0.1.0"
description = "VOD-focused linter and health checks for HLS/m3u8 manifests and segments"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "VoDLint Contributors" }
]
keywords = ["HLS", "HTTP Live Streaming", "MPEG-TS", "AAC", "m3u8", "streaming", "video"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Internet :: WWW/HTTP",
  "Environment :: Console",
]
dependencies = [
  "m3u8>=4.0.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12.0",
  "black>=25.0.0",
  "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/vodlint"
Issues = "https://github.com/your-org/vodlint/issues"

[project.scripts]
vodlint = "vodlint.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "UP", # pyupgrade
]
ignore = [
  "E203",  # whitespace before ':' (black compatibility)
]

[tool.ruff.lint.isort]
known-first-party = ["vodlint"]




